# ATLAS---Agents-for-Observability-Self-Healing

./: README.md  pyproject.toml  requirements.txt
atlas/: __init__.py  cli.py  telemetry.py
atlas/agent/: sre_agent.py
atlas/agent/tools/: kubernetes.py  simulator.py
atlas/data/: simulated_metrics.py
atlas/models/: anomaly.py
benchmarks/: README.md
dashboards/: README.md
infra/k8s/: README.md
infra/local/: README.md
tests/: test_anomaly.py
